[CORE] Clean up imports and streamline list conversion in plugin classes
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>